--- a/.evergreen.yml
+++ b/.evergreen.yml
@@ -13,8 +13,6 @@ functions:
           echo "Setting up ~/compass_env.sh"
 
           cat <<EOF_BUILD_SH > ~/compass_env.sh
-          export PATH="${node_path}:$PATH"
-          export APPDATA=${add_env_appdata}
           export CI=1
           export EVERGREEN=1
 
@@ -36,57 +34,73 @@ functions:
           export EVERGREEN_VERSION_ID="${version_id}";
           export EVERGREEN_WORKDIR="${workdir}";
 
-          # Required to sign release assets
-          export NOTARY_URL="http://notary-service.build.10gen.cc:5000"
-          export NOTARY_AUTH_TOKEN="${signing_auth_token}"
-          export NOTARY_SIGNING_KEY="${signing_key_name}"
-          export NOTARY_SIGNING_COMMENT="Evergreen project mongodb/compass ${revision} - ${build_variant} - ${branch_name}"
-
-          # Required to upload release assets to GitHub
-          export GITHUB_TOKEN=${leafybot_github_token}
-
-          # Required to upload release assets to s3 for download center
-          export DOWNLOAD_CENTER_AWS_ACCESS_KEY_ID=${aws_key_evergreen_integrations}
-          export DOWNLOAD_CENTER_AWS_SECRET_ACCESS_KEY=${aws_secret_evergreen_integrations}
-
           # node stuff
-          # export ARTIFACTS_PATH="$(pwd)/.deps"
-          # export NPM_CACHE_DIR="$ARTIFACTS_PATH/npm"
-          # export NPM_TMP_DIR="$ARTIFACTS_PATH/tmp"
+          export ARTIFACTS_PATH="$(pwd)/.deps"
+          export NPM_CACHE_DIR="$(pwd)/.deps/npm"
+          export NPM_TMP_DIR="$(pwd)/.deps/tmp"
+          export NPM_AUTH_TOKEN="${compass_npm_token}"
+
+          export NODE_JS_VERSION='8.9.3'
+
+          # OS detection
+          if [[ "${OSTYPE}" == "msys" ]]; then
+              export PLATFORM='win32'
+              export IS_WINDOWS=true
+          elif [[ "${OSTYPE}" == "cygwin" ]]; then
+              export PLATFORM='win32'
+              export IS_WINDOWS=true
+          elif [[ `uname` == "Darwin" ]]; then
+              export PLATFORM='darwin'
+              export IS_OSX=true
+          else
+              export PLATFORM='linux'
+              if cat /etc/*release | grep ^NAME | grep Red; then
+                  export IS_RHEL=true
+              elif cat /etc/*release | grep ^NAME | grep Ubuntu; then
+                  export IS_UBUNTU=true
+              fi
+          fi
+
+          if $IS_WINDOWS; then
+            export PATH="${ARTIFACTS_PATH}:$PATH"
+            export APPDATA=Z:\
+          else
+            export PATH="${ARTIFACTS_PATH}/bin:$PATH"
+          fi
 
           EOF_BUILD_SH
+
+          . ~/compass_env.sh
+
+          # Make all the dirs
+          mkdir -p $ARTIFACTS_PATH
+          mkdir -p $NPM_CACHE_DIR
+          mkdir -p $NPM_TMP_DIR
+
     - command: shell.exec
       params:
         working_dir: src
         script: |
+          set -e
+          . ~/compass_env.sh
+
           echo "Configuring npm..."
-
-          export ARTIFACTS_PATH="$(pwd)/.deps"
-          export NPM_CACHE_DIR="$(pwd)/.deps/npm"
-          export NPM_TMP_DIR="$(pwd)/.deps/tmp"
-
-          mkdir -p $NPM_CACHE_DIR
-          mkdir -p $NPM_TMP_DIR
-
           cat <<EOT > .npmrc
           devdir=${NPM_CACHE_DIR}/.node-gyp
           init-module=${NPM_CACHE_DIR}/.npm-init.js
           cache=${NPM_CACHE_DIR}
           tmp=${NPM_TMP_DIR}
-          _authToken=${compass_npm_token}
+          _authToken=${NPM_AUTH_TOKEN}
           EOT
     - command: shell.exec
       params:
         working_dir: src
         script: |
           set -ev
-          mkdir -p .deps
-          NODE_JS_VERSION='8.9.3'
 
-          if [[ "$OSTYPE" == "cygwin" ]] || [["$OSTYPE" == "msys"]] || [[ "$OSTYPE" == "win32" ]]; then
-              PLATFORM='win32'
-              OS='windows'
+          . ~/compass_env.sh
 
+          if $IS_WINDOWS; then
               echo "Installing nodejs v${NODE_JS_VERSION} for windows..."
               curl -fs \
               -o ".deps/node-v${NODE_JS_VERSION}-win-x64.zip" \
@@ -104,11 +118,6 @@ functions:
               rm -rf node_modules/npm2/
               chmod +x npm.cmd npm
           else
-              PLATFORM='linux'
-              if [[ "$OSTYPE" == "darwin"* ]]; then
-                  PLATFORM='darwin'
-              fi
-
               echo "Installing nodejs v${NODE_JS_VERSION} for ${PLATFORM}..."
               curl -fs \
               -o ".deps/node-v${NODE_JS_VERSION}-${PLATFORM}-x64.tar.gz" \
@@ -123,96 +132,18 @@ functions:
               chmod +x ./bin/node
               ./bin/node lib/node_modules/npm2/bin/npm-cli.js i -g npm@latest
               rm -rf lib/node_modules/npm2/
+
+              if $IS_RHEL; then
+                echo "Installing native-addon depenendencies for RHEL..."
+                yum localinstall -y http://mirror.centos.org/centos/7/os/x86_64/Packages/libsecret-0.18.5-2.el7.x86_64.rpm
+                yum localinstall -y http://mirror.centos.org/centos/7/os/x86_64/Packages/libsecret-devel-0.18.5-2.el7.x86_64.rpm
+              elif $IS_UBUNTU; then
+                echo "Installing native-addon depenendencies for Ubuntu..."
+                sudo apt-get install -y libsecret-1-dev
+              fi
           fi
-          
-          # echo "Installing nodejs..."
-          # curl -fs \
-          #   -o ".deps/${fetch_npm_tarball}" \
-          #   --url "https://nodejs.org/download/release/v8.9.3/${fetch_npm_tarball}"
-          # cd .deps
-          # tar xzf ${fetch_npm_tarball} --strip-components=1
-
-          # echo "Installing latest npm..."
-          # rm -rf npm npx
-          # mv lib/node_modules/npm lib/node_modules/npm2
-
-          # chmod +x ./bin/node
-          # ./bin/node lib/node_modules/npm2/bin/npm-cli.js i -g npm@latest
-          # rm -rf lib/node_modules/npm2/
-      # variants:
-      #   - macos-compass
-      #   - macos-compass-community
-      #   - macos-compass-readonly
-      #   - macos-compass-isolated
-      #   - rhel-compass
-      #   - rhel-compass-community
-      #   - rhel-compass-readonly
-      #   - rhel-compass-isolated
-      #   - ubuntu-compass
-      #   - ubuntu-compass-community
-      #   - ubuntu-compass-readonly
-      #   - ubuntu-compass-isolated
-    # - command: shell.exec
-    #   params:
-    #     working_dir: src
-    #     script: |
-    #       set -e
-
-    #       echo "Installing nodejs..."
-    #       curl -fs \
-    #         -o ".deps/node-v8.9.3-win-x64.zip" \
-    #         --url "https://nodejs.org/download/release/v8.9.3/node-v8.9.3-win-x64.zip"
-    #       cd .deps
-    #       unzip node-v8.9.3-win-x64.zip
-    #       mv node-v8.9.3-win-x64/* .
-    #       rm -rf node-v8.9.3-win-x64
-
-    #       echo "Installing latest npm..."
-
-    #       export PATH="${node_path}:$PATH"
-    #       export APPDATA=${add_env_appdata}
-
-    #       rm -rf npm npx npm.cmd npx.cmd
-    #       mv node_modules/npm node_modules/npm2
-
-    #       chmod +x ./node.exe
-
-    #       ./node.exe node_modules/npm2/bin/npm-cli.js i -g npm@latest
-    #       rm -rf node_modules/npm2/
-    #       chmod +x npm.cmd
-    #       chmod +x npm
-    #   variants:
-    #     - windows-compass
-    #     - windows-compass-community
-    #     - windows-compass-readonly
-    #     - windows-compass-isolated
 
   'install':
-    # - command: shell.exec
-    #   params:
-    #     working_dir: src
-    #     script: |
-    #       set -e
-    #       echo "Installing native-addon depenendencies for RHEL..."
-    #       yum localinstall -y http://mirror.centos.org/centos/7/os/x86_64/Packages/libsecret-0.18.5-2.el7.x86_64.rpm
-    #       yum localinstall -y http://mirror.centos.org/centos/7/os/x86_64/Packages/libsecret-devel-0.18.5-2.el7.x86_64.rpm
-    #   variants:
-    #     - rhel-compass
-    #     - rhel-compass-community
-    #     - rhel-compass-readonly
-    #     - rhel-compass-isolated
-    # - command: shell.exec
-    #   params:
-    #     working_dir: src
-    #     script: |
-    #       set -e
-    #       echo "Installing native-addon depenendencies for Ubuntu..."
-    #       sudo apt-get install -y libsecret-1-dev
-    #   variants:
-    #     - ubuntu-compass
-    #     - ubuntu-compass-community
-    #     - ubuntu-compass-readonly
-    #     - ubuntu-compass-isolated
     - command: shell.exec
       params:
         working_dir: src
@@ -221,6 +152,16 @@ functions:
           . ~/compass_env.sh
           echo "Installing Compass dependencies..."
           npm ci
+
+          if $IS_WINDOWS; then
+            echo "Fetching signtool -> notary-service hack..."
+
+            curl -fs \
+              -o "signtool.exe" \
+              --url "https://s3.amazonaws.com/boxes.10gen.com/build/signtool.exe"
+            rm -f node_modules/electron-winstaller/vendor/signtool.exe
+            chmod +x signtool.exe
+          fi
     - command: shell.exec
       params:
         working_dir: src
@@ -303,23 +244,6 @@ functions:
       params:
         working_dir: src
         script: |
-            set -e
-            echo "Fetching signtool -> notary-service hack..."
-
-            curl -fs \
-              -o "signtool.exe" \
-              --url "https://s3.amazonaws.com/boxes.10gen.com/build/signtool.exe"
-            rm -f node_modules/electron-winstaller/vendor/signtool.exe
-            chmod +x signtool.exe
-        variants:
-          - windows-compass
-          - windows-compass-community
-          - windows-compass-readonly
-          - windows-compass-isolated
-    - command: shell.exec
-      params:
-        working_dir: src
-        script: |
           set -e
           cat <<EOF_BUILD_SH > ~/compass_build.sh
           cd $(pwd)
@@ -327,15 +251,17 @@ functions:
           # Load environment variables
           . ~/compass_env.sh
 
+          # Required to sign release assets
+          export NOTARY_URL="http://notary-service.build.10gen.cc:5000"
+          export NOTARY_AUTH_TOKEN="${signing_auth_token}"
+          export NOTARY_SIGNING_KEY="${signing_key_name}"
+          export NOTARY_SIGNING_COMMENT="Evergreen project mongodb/compass ${revision} - ${build_variant} - ${branch_name}"
+
           echo "Creating signed release build..."
           npm run release ${compass_distribution};
           EOF_BUILD_SH
 
-          # NOTE (imlucas) This build_via_local_tunnel thing is needed for
-          # codesign to work on the macOS box. Can't remember but something
-          # related to keychain unlock? Go look it up.
-          if [ -n "${build_via_local_tunnel|}" ]
-          then
+          if $IS_OSX; then
             ssh -v -p 2222 localhost ". compass_build.sh"
           else
             . ~/compass_build.sh
@@ -350,6 +276,12 @@ functions:
 
         # Load environment variables
         . ~/compass_env.sh
+        # Required to upload release assets to GitHub
+        export GITHUB_TOKEN=${leafybot_github_token}
+
+        # Required to upload release assets to s3 for download center
+        export DOWNLOAD_CENTER_AWS_ACCESS_KEY_ID=${aws_key_evergreen_integrations}
+        export DOWNLOAD_CENTER_AWS_SECRET_ACCESS_KEY=${aws_secret_evergreen_integrations}
 
         echo "Upload release assets to S3 and GitHub if needed"
         npm run upload ${compass_distribution}
@@ -548,9 +480,6 @@ buildvariants:
   #   run_on:
   #     - 'osx-1010-compass'
   #   expansions:
-  #     build_via_local_tunnel: true
-  #     fetch_npm_tarball: node-v8.9.3-darwin-x64.tar.gz
-  #     node_path: '$(pwd)/.deps/bin'
   #     num_cores: $(sysctl -n hw.logicalcpu)
   #     compass_distribution: compass
   #   tasks:
@@ -561,9 +490,6 @@ buildvariants:
     run_on:
       - 'macos-1012'
     expansions:
-      build_via_local_tunnel: true
-      fetch_npm_tarball: node-v8.9.3-darwin-x64.tar.gz
-      node_path: '$(pwd)/.deps/bin'
       num_cores: $(sysctl -n hw.logicalcpu)
       compass_distribution: compass
     tasks:
@@ -576,9 +502,6 @@ buildvariants:
   #   run_on:
   #     - 'macos-1012'
   #   expansions:
-  #     build_via_local_tunnel: true
-  #     fetch_npm_tarball: node-v8.9.3-darwin-x64.tar.gz
-  #     node_path: '$(pwd)/.deps/bin'
   #     num_cores: $(sysctl -n hw.logicalcpu)
   #     compass_distribution: compass-community
   #   tasks:
@@ -590,9 +513,6 @@ buildvariants:
   #   run_on:
   #     - 'macos-1012'
   #   expansions:
-  #     build_via_local_tunnel: true
-  #     fetch_npm_tarball: node-v8.9.3-darwin-x64.tar.gz
-  #     node_path: '$(pwd)/.deps/bin'
   #     num_cores: $(sysctl -n hw.logicalcpu)
   #     compass_distribution: compass-readonly
   #   tasks:
@@ -604,9 +524,6 @@ buildvariants:
   #   run_on:
   #     - 'macos-1012'
   #   expansions:
-  #     build_via_local_tunnel: true
-  #     fetch_npm_tarball: node-v8.9.3-darwin-x64.tar.gz
-  #     node_path: '$(pwd)/.deps/bin'
   #     num_cores: $(sysctl -n hw.logicalcpu)
   #     compass_distribution: compass-isolated
   #   tasks:
@@ -618,10 +535,7 @@ buildvariants:
   #   run_on:
   #     - 'windows-64-vs2015-test'
   #   expansions:
-  #     fetch_npm_tarball: node-v8.9.3-win-x64.zip
-  #     node_path: '$(pwd)/.deps'
   #     num_cores: $(grep -c ^processor /proc/cpuinfo)
-  #     add_env_appdata: Z:\
   #     compass_distribution: compass
   #   tasks:
   #     - name: compile
@@ -632,10 +546,7 @@ buildvariants:
   #   run_on:
   #     - 'windows-64-vs2015-test'
   #   expansions:
-  #     fetch_npm_tarball: node-v8.9.3-win-x64.zip
-  #     node_path: '$(pwd)/.deps'
   #     num_cores: $(grep -c ^processor /proc/cpuinfo)
-  #     add_env_appdata: Z:\
   #     compass_distribution: compass-community
   #   tasks:
   #     - name: compile
@@ -646,10 +557,7 @@ buildvariants:
   #   run_on:
   #     - 'windows-64-vs2015-test'
   #   expansions:
-  #     fetch_npm_tarball: node-v8.9.3-win-x64.zip
-  #     node_path: '$(pwd)/.deps'
   #     num_cores: $(grep -c ^processor /proc/cpuinfo)
-  #     add_env_appdata: Z:\
   #     compass_distribution: compass-readonly
   #   tasks:
   #     - name: compile
@@ -660,10 +568,7 @@ buildvariants:
   #   run_on:
   #     - 'windows-64-vs2015-test'
   #   expansions:
-  #     fetch_npm_tarball: node-v8.9.3-win-x64.zip
-  #     node_path: '$(pwd)/.deps'
   #     num_cores: $(grep -c ^processor /proc/cpuinfo)
-  #     add_env_appdata: Z:\
   #     compass_distribution: compass-isolated
   #   tasks:
   #     - name: compile
@@ -674,8 +579,6 @@ buildvariants:
   #   run_on:
   #     - 'ubuntu1404-test'
   #   expansions:
-  #     fetch_npm_tarball: node-v8.9.3-linux-x64.tar.gz
-  #     node_path: '$(pwd)/.deps/bin'
   #     compile_env: CC=/opt/mongodbtoolchain/bin/gcc CXX=/opt/mongodbtoolchain/bin/g++
   #     num_cores: $(grep -c ^processor /proc/cpuinfo)
   #     compass_distribution: compass
@@ -688,8 +591,6 @@ buildvariants:
   #   run_on:
   #     - 'ubuntu1404-test'
   #   expansions:
-  #     fetch_npm_tarball: node-v8.9.3-linux-x64.tar.gz
-  #     node_path: '$(pwd)/.deps/bin'
   #     compile_env: CC=/opt/mongodbtoolchain/bin/gcc CXX=/opt/mongodbtoolchain/bin/g++
   #     num_cores: $(grep -c ^processor /proc/cpuinfo)
   #     compass_distribution: compass-community
@@ -702,8 +603,6 @@ buildvariants:
   #   run_on:
   #     - 'ubuntu1404-test'
   #   expansions:
-  #     fetch_npm_tarball: node-v8.9.3-linux-x64.tar.gz
-  #     node_path: '$(pwd)/.deps/bin'
   #     compile_env: CC=/opt/mongodbtoolchain/bin/gcc CXX=/opt/mongodbtoolchain/bin/g++
   #     num_cores: $(grep -c ^processor /proc/cpuinfo)
   #     compass_distribution: compass-readonly
@@ -716,8 +615,6 @@ buildvariants:
   #   run_on:
   #     - 'ubuntu1404-test'
   #   expansions:
-  #     fetch_npm_tarball: node-v8.9.3-linux-x64.tar.gz
-  #     node_path: '$(pwd)/.deps/bin'
   #     compile_env: CC=/opt/mongodbtoolchain/bin/gcc CXX=/opt/mongodbtoolchain/bin/g++
   #     num_cores: $(grep -c ^processor /proc/cpuinfo)
   #     compass_distribution: compass-isolated
@@ -730,8 +627,6 @@ buildvariants:
   #   run_on:
   #     - 'rhel70'
   #   expansions:
-  #     fetch_npm_tarball: node-v8.9.3-linux-x64.tar.gz
-  #     node_path: '$(pwd)/.deps/bin'
   #     compile_env: CC=/opt/mongodbtoolchain/bin/gcc CXX=/opt/mongodbtoolchain/bin/g++
   #     num_cores: $(grep -c ^processor /proc/cpuinfo)
   #     compass_distribution: compass
@@ -744,8 +639,6 @@ buildvariants:
   #   run_on:
   #     - 'rhel70'
   #   expansions:
-  #     fetch_npm_tarball: node-v8.9.3-linux-x64.tar.gz
-  #     node_path: '$(pwd)/.deps/bin'
   #     compile_env: CC=/opt/mongodbtoolchain/bin/gcc CXX=/opt/mongodbtoolchain/bin/g++
   #     num_cores: $(grep -c ^processor /proc/cpuinfo)
   #     compass_distribution: compass-community
@@ -758,8 +651,6 @@ buildvariants:
   #   run_on:
   #     - 'rhel70'
   #   expansions:
-  #     fetch_npm_tarball: node-v8.9.3-linux-x64.tar.gz
-  #     node_path: '$(pwd)/.deps/bin'
   #     compile_env: CC=/opt/mongodbtoolchain/bin/gcc CXX=/opt/mongodbtoolchain/bin/g++
   #     num_cores: $(grep -c ^processor /proc/cpuinfo)
   #     compass_distribution: compass-readonly
@@ -772,8 +663,6 @@ buildvariants:
   #   run_on:
   #     - 'rhel70'
   #   expansions:
-  #     fetch_npm_tarball: node-v8.9.3-linux-x64.tar.gz
-  #     node_path: '$(pwd)/.deps/bin'
   #     compile_env: CC=/opt/mongodbtoolchain/bin/gcc CXX=/opt/mongodbtoolchain/bin/g++
   #     num_cores: $(grep -c ^processor /proc/cpuinfo)
   #     compass_distribution: compass-isolated
